# Schedy-project

./: README.md
client/: .env  index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  main.tsx
client/src/utils/: api.ts
server/: .env  __main__.py  config_reader.py  pyproject.toml
server/api/: __init__.py  common.py  users.py  utils.py
server/db/migrations/models/: 0_20250427181054_init.py
server/db/models/: user.py
server/handlers/: __init__.py  common.py
server/keyboards/: __init__.py  bulders.py
